# magnolia

./: Cargo.toml  README.md
backend-common/: Cargo.toml
backend-native/: Cargo.toml  tauri.conf.json
backend-web/: Cargo.toml
frontend/: Cargo.toml  index.html
frontend/src/: app.rs  main.rs
