[package]
name = "frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
backend-common = { path = "../backend-common" }

[features]
backend-web = [ "backend-common/backend-web" ]
